[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.80"
chrono = { version = "=0.4.35", features = ["serde"] }
plotly = "=0.8.4"
reqwest = { version = "=0.11.24", features = ["json"] }
serde = { version = "=1.0.197", features = ["derive"] }
tokio = { version = "=1.36.0", features = ["full"] }
